# cuda-examples

./: .gitignore  AGENTS.md  README.md
Cpp/: CMakeLists.txt
Cpp/CG_Cpp_CUDA/: CMakeLists.txt  README.md
Cpp/CG_Cpp_CUDA/examples/: main.cu
Cpp/CG_Cpp_CUDA/include/: cg.cuh  solver.cuh
Cpp/CG_Cpp_CUDA/src/: cg.cu
Cpp/Common/: CMakeLists.txt
Cpp/Dot_Cpp_CUDA/: CMakeLists.txt  README.md
Cpp/Dot_Cpp_CUDA/examples/: main.cu
Cpp/Dot_Cpp_CUDA/include/: dot.cuh
Cpp/Dot_Cpp_CUDA/src/: dot.cu
Cpp/Dot_Cpp_CUDA/tests/: CMakeLists.txt  test_dot.cu
Cpp/SpMV_Cpp_CUDA/: CMakeLists.txt  Makefile  README.md  helper_cuda.h  kernels.cu  kernels.cuh  main.cu  matrix.hpp  matrix_csr.cu  matrix_csr.cuh  mmio_reader.cu  mmio_reader.cuh  pixi.toml  solve_pres_poisson.py  spmv  vector_dense.cu  vector_dense.cuh
Cpp/SpMV_Cpp_CUDA/data/: cage3_symm.mtx  simple1.mtx
Cpp/SpMV_Cpp_CUDA/examples/benchmark/: main.cu  mmio_reader.cuh
Cpp/SpMV_Cpp_CUDA/include/sparse/: csr_matrix.cuh  dense_vector.cuh  kernels.cuh  spmv.cuh
Cpp/SpMV_Cpp_CUDA/src/: csr_matrix.cu  dense_vector.cu  kernels.cu  mmio_reader.cu  mmio_reader.cuh  spmv.cu
Cpp/SpMV_Cpp_CUDA_ManagedMemory/: mmio_reader.cuh  mytype.h  vector_dense.cu
Fortran/SpMV_Fortran_OACC/: Makefile  matrix_utils.f90
Fortran/SpMV_Fortran_OACC/tests/: test_readmm.f90
Fortran/cuSPARSE_Fortran_example/: Makefile
SpMV_Cpp_CUDA/: Makefile  main.cu  matrix.hpp  matrix_csr.cu  matrix_csr.cuh  mmio_reader.cu  mmio_reader.cuh
SpMV_Fortran_OACC/: .gitignore  Makefile  README.md  csort.cu  cusparse_routines.f90  matrix_utils.f90  prec_const.f90  spmv_cusparse.f90  spmv_driver.F90
SpMV_Fortran_OACC/tests/: Makefile  test_cusparse.f90  test_readmm.f90
Thrust_Interop/: Makefile  README.md  thrust_interop.f90  thrust_module.cuf
archive/Fortran/SpMV_Fortran_OACC/: README.md  csort.cu  main.f90  matrix_utils.f90  spmv  thrust_module.cuf
archive/Fortran/SpMV_Fortran_OACC/tests/: test_thrust
archive/Fortran/Thrust_Interop/: thrust_interop
archive/Fortran/cuSPARSE_Fortran_example/: cusparse_routines.f90  test_cusparse  test_cusparse.f90
archive/SpMV_Cpp_CUDA_ManagedMemory/: main.cu  matrix_csr.cu  spmv  vector_dense.cuh
